# aicmd

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/zx/: __init__.py  ai.py  alias.py  cli.py  community.py  config.py  context.py  cost.py  doctor.py  executor.py  history.py  installer.py  narrate.py  planner.py  playbook.py  recipes.py  remote.py  safety.py  search.py  snapshot.py  tutor.py  ui.py  undo.py
